# sriracha

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
sriracha/: __init__.py  auth.py  config.py  extract.py  gmail_client.py  llm.py  models.py  run.py  sheets_client.py  store.py
